--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,19 @@ repositories {
 }
 
 dependencies {
+    // slf4j门面
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+    // log4j-slf4j-impl桥接器
+    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.14.0'
+    // log4j2 api实现
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.0'
+    // log4j2 core实现
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.0'
+
+    // lombok，实现@Slf4j注解
+    compileOnly 'org.projectlombok:lombok:1.18.16'
+    annotationProcessor 'org.projectlombok:lombok:1.18.16'
+
+    // 单元测试
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
