--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,17 @@ repositories {
 }
 
 dependencies {
+    // slf4j门面
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+    // logback-classic桥接器
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    // loglock核心实现
+    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
+
+    // lombok，实现@Slf4j注解
+    compileOnly 'org.projectlombok:lombok:1.18.16'
+    annotationProcessor 'org.projectlombok:lombok:1.18.16'
+
+    // 单元测试
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
